--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "node": ">=12.0.0"
   },
   "scripts": {
-    "dev": "next",
+    "dev": "next -p 3002",
     "build": "next build",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint-fix": "npm run lint -- --fix",
@@ -17,14 +17,15 @@
     "tsc": "tsc"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.7",
     "@glif/filecoin-address": "latest",
     "@glif/filecoin-message": "latest",
     "@glif/filecoin-message-confirmer": "latest",
     "@glif/filecoin-number": "latest",
     "@glif/filecoin-rpc-client": "latest",
     "@glif/filecoin-wallet-provider": "latest",
-    "@glif/react-components": "^2.0.0-alpha.21",
-    "@glif/wallet-provider-react": "latest",
+    "@glif/react-components": "^2.0.0-alpha.25",
+    "@glif/wallet-provider-react": "^0.0.0-alpha.8",
     "@ledgerhq/hw-transport-webhid": "^6.4.1",
     "@zondax/filecoin-signing-tools": "^0.18.2",
     "@zondax/ledger-filecoin": "0.11.2",
