--- a/package.json
+++ b/package.json
@@ -24,10 +24,9 @@
     "@glif/filecoin-number": "latest",
     "@glif/filecoin-rpc-client": "latest",
     "@glif/filecoin-wallet-provider": "latest",
-    "@glif/react-components": "^2.0.0-alpha.25",
-    "@glif/wallet-provider-react": "^0.0.0-alpha.8",
+    "@glif/wallet-provider-react": "latest",
     "@ledgerhq/hw-transport-webhid": "^6.4.1",
-    "@zondax/filecoin-signing-tools": "^0.18.2",
+    "@zondax/filecoin-signing-tools": "^0.18.6",
     "@zondax/ledger-filecoin": "0.11.2",
     "axios": "0.24.0",
     "base32-decode": "^1.0.0",
