--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
   "dependencies": {
     "@apollo/client": "^3.5.7",
     "@glif/filecoin-address": "latest",
-    "@glif/filecoin-message": "^2.0.0-alpha.16",
+    "@glif/filecoin-message": "^2.0.0-alpha.18",
     "@glif/filecoin-message-confirmer": "latest",
     "@glif/filecoin-number": "latest",
     "@glif/filecoin-rpc-client": "latest",
     "@glif/filecoin-wallet-provider": "latest",
+    "@glif/logger": "^2.0.0-alpha.16",
     "@glif/react-components": "^2.0.0-alpha.33",
-    "@glif/wallet-provider-react": "^0.0.0-alpha.12",
+    "@glif/wallet-provider-react": "^0.0.0-alpha.14",
     "@ledgerhq/hw-transport-webhid": "^6.4.1",
     "@zondax/filecoin-signing-tools": "^0.18.6",
     "@zondax/ledger-filecoin": "0.11.2",
