--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "filecoin-web-wallet",
-  "version": "2.10.4",
+  "name": "safe",
+  "version": "0.0.0-1",
   "engines": {
     "node": ">=12.0.0"
   },
