--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "filecoin-web-wallet",
-  "version": "2.10.4",
+  "name": "safe",
+  "version": "0.0.0-1",
   "engines": {
     "node": ">=12.0.0"
   },
@@ -19,13 +19,14 @@
   "dependencies": {
     "@apollo/client": "^3.5.7",
     "@glif/filecoin-address": "latest",
-    "@glif/filecoin-message": "^2.0.0-alpha.16",
+    "@glif/filecoin-message": "^2.0.0-alpha.18",
     "@glif/filecoin-message-confirmer": "latest",
     "@glif/filecoin-number": "latest",
     "@glif/filecoin-rpc-client": "latest",
     "@glif/filecoin-wallet-provider": "latest",
-    "@glif/react-components": "^2.0.0-alpha.33",
-    "@glif/wallet-provider-react": "^0.0.0-alpha.12",
+    "@glif/logger": "^2.0.0-alpha.16",
+    "@glif/react-components": "^2.0.0-alpha.34",
+    "@glif/wallet-provider-react": "^0.0.0-alpha.14",
     "@ledgerhq/hw-transport-webhid": "^6.4.1",
     "@zondax/filecoin-signing-tools": "^0.18.6",
     "@zondax/ledger-filecoin": "0.11.2",
@@ -53,7 +54,7 @@
     "@testing-library/react": "12.1.2",
     "@testing-library/react-hooks": "7.0.2",
     "@types/jest": "^27.0.2",
-    "@typescript-eslint/parser": "^4.31.0",
+    "@typescript-eslint/parser": "^5.10.2",
     "babel-jest": "^27.1.1",
     "babel-plugin-styled-components": "1.12.0",
     "eslint": "^7.32.0",
