--- a/.github/workflows/mainnet.yml
+++ b/.github/workflows/mainnet.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-      - run: npm i
+      - run: npm ci --ignore-scripts
       - run: npm test
       - run: npm run export
         env:
