--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "serve": "npx serve ./out",
     "store-ipfs": "npx @glif/deployment-cli ipfs ./out $WEB3_STORAGE_TOKEN",
     "tsc": "tsc",
-    "publish:calibration": "npx @cloudflare/wrangler publish --env calibration",
-    "publish:mainnet": "npx @cloudflare/wrangler publish --env mainnet"
+    "publish:calibration": "wrangler publish --env calibration",
+    "publish:mainnet": "wrangler publish --env mainnet"
   },
   "dependencies": {
     "@apollo/client": "^3.5.7",
@@ -54,7 +54,6 @@
     "swr": "^1.0.0"
   },
   "devDependencies": {
-    "@cloudflare/wrangler": "^1.19.8",
     "@glif/deployment-cli": "^2.0.0-beta.0",
     "@testing-library/jest-dom": "5.16.1",
     "@testing-library/react": "12.1.2",
