--- a/.github/workflows/calibration.yml
+++ b/.github/workflows/calibration.yml
@@ -24,7 +24,8 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-      - run: npm ci --ignore-scripts
+      - run: npm i
+      # - run: npm run lint
       - run: npm test
       - run: npm run export
         env:
