--- a/.github/workflows/calibration.yml
+++ b/.github/workflows/calibration.yml
@@ -25,7 +25,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
       - run: npm ci --ignore-scripts
-      # - run: npm run lint
+      - run: npm run lint
       - run: npm test
       - run: npm run export
         env:
