--- a/.github/workflows/mainnet.yml
+++ b/.github/workflows/mainnet.yml
@@ -23,6 +23,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
       - run: npm ci --ignore-scripts
+      - run: npm run lint
       - run: npm test
       - run: npm run export
         env:
