--- a/.github/workflows/mainnet.yml
+++ b/.github/workflows/mainnet.yml
@@ -4,7 +4,11 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: deploy - calibration
+name: deploy - mainnet
+
+env:
+  node_version: 14
+  git_email: jpschwartz2@uwalumni.com
 
 on:
   workflow_dispatch:
