--- a/.github/workflows/mainnet.yml
+++ b/.github/workflows/mainnet.yml
@@ -55,12 +55,6 @@ jobs:
         id: package-version
         uses: martinbeentjes/npm-get-version-action@master
 
-      # push to git
-      - name: Push
-        run: |
-          git push origin v${{ steps.package-version.outputs.current-version}}
-          git push origin primary
-
       - name: Build
         run: npm run export
         env:
@@ -90,11 +84,16 @@ jobs:
         uses: scottbrenner/generate-changelog-action@master
         id: Changelog
 
-      - name: IPFS
+      - name: Filecoin-archive
         id: ipfs
         run: npm run store-ipfs
         env:
           WEB3_STORAGE_TOKEN: ${{ secrets.WEB3_STORAGE_TOKEN }}
+
+      - name: Git-push
+        run: |
+          git push origin v${{ steps.package-version.outputs.current-version}}
+          git push origin primary
 
       - name: Release-to-mainnet
         uses: softprops/action-gh-release@v1
