--- a/.github/workflows/mainnet.yml
+++ b/.github/workflows/mainnet.yml
@@ -17,6 +17,10 @@ on:
         description: 'npm publish {major,minor,patch,prerelease}'
         required: true
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build:
     runs-on: ${{ matrix.os }}
