--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "safe",
   "version": "0.0.3-calibration.5",
   "engines": {
-    "node": ">=12.0.0"
+    "node": ">=16.0.0"
   },
   "scripts": {
     "dev": "next -p 3002",
@@ -22,14 +22,14 @@
   "dependencies": {
     "@apollo/client": "^3.5.7",
     "@glif/base-css": "^0.0.9",
-    "@glif/filecoin-address": "latest",
+    "@glif/filecoin-address": "^2.0.0-beta.3",
     "@glif/filecoin-message": "^2.0.0-alpha.18",
     "@glif/filecoin-message-confirmer": "latest",
     "@glif/filecoin-number": "latest",
     "@glif/filecoin-rpc-client": "latest",
     "@glif/filecoin-wallet-provider": "latest",
     "@glif/logger": "^2.0.0-alpha.16",
-    "@glif/react-components": "^2.0.0-alpha.55",
+    "@glif/react-components": "^2.0.0-alpha.58",
     "@glif/wallet-provider-react": "^0.0.0-alpha.19",
     "@ledgerhq/hw-transport-webhid": "^6.4.1",
     "@zondax/filecoin-signing-tools": "^0.20.0",
