--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "@glif/filecoin-message-confirmer": "latest",
     "@glif/filecoin-number": "latest",
     "@glif/filecoin-rpc-client": "latest",
-    "@glif/filecoin-wallet-provider": "latest",
+    "@glif/filecoin-wallet-provider": "^2.0.0-beta.4",
     "@glif/logger": "^2.0.0-alpha.16",
     "@glif/react-components": "^2.0.0-alpha.61",
-    "@glif/wallet-provider-react": "^0.0.0-alpha.20",
+    "@glif/wallet-provider-react": "^0.0.0-alpha.21",
     "@ledgerhq/hw-transport-webhid": "^6.4.1",
     "@zondax/filecoin-signing-tools": "^0.20.0",
     "@zondax/ledger-filecoin": "0.11.2",
