--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@glif/filecoin-rpc-client": "^2.0.0-beta.8",
     "@glif/filecoin-wallet-provider": "^2.0.0-beta.10",
     "@glif/logger": "^2.0.0-alpha.16",
-    "@glif/react-components": "^2.0.0-alpha.65",
+    "@glif/react-components": "^2.0.0-alpha.66",
     "@glif/wallet-provider-react": "^0.0.0-alpha.22",
     "@ledgerhq/hw-transport-webhid": "^6.4.1",
     "@zondax/filecoin-signing-tools": "^0.20.0",
@@ -59,6 +59,7 @@
     "@testing-library/react": "12.1.2",
     "@testing-library/react-hooks": "7.0.2",
     "@types/jest": "^27.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.10.2",
     "babel-jest": "^27.1.1",
     "babel-plugin-styled-components": "1.12.0",
