--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "@glif/filecoin-rpc-client": "^2.0.0-beta.8",
     "@glif/filecoin-wallet-provider": "^2.0.0-beta.10",
     "@glif/logger": "^2.0.0-alpha.16",
-    "@glif/react-components": "^2.0.0-alpha.67",
+    "@glif/react-components": "^2.0.0-alpha.69",
     "@glif/wallet-provider-react": "^0.0.0-alpha.22",
     "@ledgerhq/hw-transport-webhid": "^6.4.1",
-    "@zondax/filecoin-signing-tools": "^0.20.0",
+    "@zondax/filecoin-signing-tools": "^1.0.0-rc1",
     "@zondax/ledger-filecoin": "0.11.2",
     "axios": "0.24.0",
     "base32-decode": "^1.0.0",
