Update mainnet node

--- a/.github/workflows/mainnet.yml
+++ b/.github/workflows/mainnet.yml
@@ -59,7 +59,7 @@ jobs:
       - name: Build
         run: npm run export
         env:
-          LOTUS_NODE_JSONRPC: 'https://mainnet.glif.host'
+          LOTUS_NODE_JSONRPC: 'https://tmp.node.glif.io'
           GRAPH_API_URL: 'graph.glif.link/query'
           COIN_TYPE: 'f'
           HOME_URL: 'https://calibration.glif.link'
