--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "@glif/filecoin-message-confirmer": "2.0.0-beta.12",
     "@glif/filecoin-number": "^2.0.0-beta.0",
     "@glif/filecoin-rpc-client": "^2.0.0-beta.8",
-    "@glif/filecoin-wallet-provider": "^2.0.0-beta.12",
-    "@glif/logger": "^2.0.0-alpha.16",
+    "@glif/filecoin-wallet-provider": "^2.0.0-beta.15",
+    "@glif/logger": "^2.0.0-beta.7",
     "@glif/react-components": "^2.0.0-alpha.92",
-    "@glif/wallet-provider-react": "^0.0.0-alpha.24",
+    "@glif/wallet-provider-react": "^0.0.0-alpha.27",
     "@ledgerhq/hw-transport-webhid": "^6.4.1",
     "@zondax/filecoin-signing-tools": "^0.20.0",
     "@zondax/ledger-filecoin": "0.11.2",
