--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "@glif/filecoin-rpc-client": "^2.0.0-beta.8",
     "@glif/filecoin-wallet-provider": "^2.0.0-beta.15",
     "@glif/logger": "^2.0.0-beta.7",
-    "@glif/react-components": "^2.0.0-alpha.104",
-    "@zondax/filecoin-signing-tools": "^0.20.0",
+    "@glif/react-components": "^2.0.0-alpha.106",
+    "@zondax/filecoin-signing-tools": "^1.0.0-rc2",
     "base32-decode": "^1.0.0",
     "cbor": "^8.1.0",
     "next": "^12.1.6",
