--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "@glif/logger": "^2.0.0-beta.7",
     "@glif/react-components": "^2.0.0-alpha.106",
     "@zondax/filecoin-signing-tools": "^1.0.0-rc2",
-    "base32-decode": "^1.0.0",
     "cbor": "^8.1.0",
     "next": "^12.1.6",
     "prop-types": "15.8.1",
@@ -45,6 +44,7 @@
     "@testing-library/react": "12.1.2",
     "@testing-library/react-hooks": "7.0.2",
     "@types/jest": "^27.0.2",
+    "@types/react": "^17.0.45",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.27.1",
     "babel-jest": "^27.1.1",
@@ -56,10 +56,8 @@
     "jest": "^27.1.1",
     "jest-styled-components": "7.0.8",
     "prettier": "2.6.2",
-    "react-test-renderer": "17.0.2",
     "ts-jest": "^27.0.5",
-    "typescript": "^4.7.3",
-    "whatwg-fetch": "^3.6.2"
+    "typescript": "^4.7.3"
   },
   "license": "(Apache-2.0 OR MIT)"
 }
