--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "jest-styled-components": "7.0.8",
     "prettier": "2.6.2",
     "ts-jest": "^27.0.5",
-    "typescript": "^4.7.3"
+    "typescript": "^4.7.3",
+    "whatwg-fetch": "^3.6.2"
   },
   "license": "(Apache-2.0 OR MIT)"
 }
