--- a/package.json
+++ b/package.json
@@ -43,20 +43,21 @@
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "12.1.2",
     "@testing-library/react-hooks": "7.0.2",
-    "@types/jest": "^27.0.2",
+    "@types/jest": "^28.1.1",
     "@types/react": "^17.0.45",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.27.1",
-    "babel-jest": "^27.1.1",
+    "babel-jest": "^28.1.1",
     "babel-plugin-styled-components": "2.0.7",
     "eslint": "^8.14.0",
     "eslint-config-next": "12.1.6",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-prettier": "4.0.0",
-    "jest": "^27.1.1",
+    "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
     "jest-styled-components": "7.0.8",
     "prettier": "2.6.2",
-    "ts-jest": "^27.0.5",
+    "ts-jest": "^28.0.5",
     "typescript": "^4.7.3",
     "whatwg-fetch": "^3.6.2"
   },
