--- a/package.json
+++ b/package.json
@@ -21,16 +21,15 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.6",
-    "@glif/base-css": "^0.0.24",
+    "@glif/base-css": "^0.0.25",
     "@glif/filecoin-address": "^2.0.0-beta.3",
     "@glif/filecoin-message": "^2.0.0-beta.13",
     "@glif/filecoin-number": "^2.0.0-beta.0",
     "@glif/filecoin-rpc-client": "^2.0.0-beta.8",
     "@glif/filecoin-wallet-provider": "^2.0.0-beta.15",
     "@glif/logger": "^2.0.0-beta.7",
-    "@glif/react-components": "^2.0.0-alpha.104",
-    "@zondax/filecoin-signing-tools": "^0.20.0",
-    "base32-decode": "^1.0.0",
+    "@glif/react-components": "^2.0.0-alpha.108",
+    "@zondax/filecoin-signing-tools": "^0.20.1",
     "cbor": "^8.1.0",
     "next": "^12.1.6",
     "prop-types": "15.8.1",
@@ -44,20 +43,21 @@
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "12.1.2",
     "@testing-library/react-hooks": "7.0.2",
-    "@types/jest": "^27.0.2",
+    "@types/jest": "^28.1.1",
+    "@types/react": "^17.0.45",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.27.1",
-    "babel-jest": "^27.1.1",
+    "babel-jest": "^28.1.1",
     "babel-plugin-styled-components": "2.0.7",
     "eslint": "^8.14.0",
     "eslint-config-next": "12.1.6",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-prettier": "4.0.0",
-    "jest": "^27.1.1",
+    "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
     "jest-styled-components": "7.0.8",
     "prettier": "2.6.2",
-    "react-test-renderer": "17.0.2",
-    "ts-jest": "^27.0.5",
+    "ts-jest": "^28.0.5",
     "typescript": "^4.7.3",
     "whatwg-fetch": "^3.6.2"
   },
