--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "@glif/filecoin-rpc-client": "^2.0.0-beta.8",
     "@glif/filecoin-wallet-provider": "^2.0.0-beta.15",
     "@glif/logger": "^2.0.0-beta.7",
-    "@glif/react-components": "^2.0.0-alpha.108",
-    "@zondax/filecoin-signing-tools": "^0.20.1",
+    "@glif/react-components": "^2.0.0-alpha.110",
+    "@zondax/filecoin-signing-tools": "^1.0.0",
     "cbor": "^8.1.0",
+    "lodash.clonedeep": "^4.5.0",
     "next": "^12.1.6",
     "prop-types": "15.8.1",
     "react": "^17.0.2",
