Update mainnet env vars

--- a/.github/workflows/mainnet.yml
+++ b/.github/workflows/mainnet.yml
@@ -62,12 +62,12 @@ jobs:
           LOTUS_NODE_JSONRPC: 'https://mainnet.glif.host/'
           GRAPH_API_URL: 'graph.glif.link/query'
           COIN_TYPE: 'f'
-          HOME_URL: 'https://calibration.glif.link'
+          HOME_URL: 'https://apps.glif.io'
           BLOG_URL: 'https://blog.glif.io'
-          WALLET_URL: 'https://wallet.glif.link'
-          SAFE_URL: 'https://safe.glif.link'
-          EXPLORER_URL: 'https://explorer.glif.link'
-          VERIFIER_URL: 'https://verify.glif.link'
+          WALLET_URL: 'https://wallet.glif.io'
+          SAFE_URL: 'https://safe.glif.io'
+          EXPLORER_URL: 'https://explorer.glif.io'
+          VERIFIER_URL: 'https://verify.glif.io'
           SENTRY_DSN: 'https://bc9449e8f4fc439f943374373b9a3f7a@o1126745.ingest.sentry.io/6186018'
           SENTRY_ENV: 'mainnet'
           NODE_STATUS_API_KEY: 'm786191525-b3192b91db66217a44f7d4be'
