--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
   "dependencies": {
     "@apollo/client": "^3.6.9",
     "@glif/base-css": "^0.0.33",
-    "@glif/filecoin-actor-utils": "^2.0.4",
-    "@glif/filecoin-address": "^2.0.0-beta.16",
-    "@glif/filecoin-message": "^2.0.0-beta.16",
-    "@glif/filecoin-number": "^2.0.0-beta.16",
-    "@glif/filecoin-rpc-client": "^2.0.0-beta.8",
-    "@glif/filecoin-wallet-provider": "^2.0.0-beta.18",
-    "@glif/logger": "^2.0.0-beta.7",
-    "@glif/react-components": "^2.0.0-alpha.154",
+    "@glif/filecoin-actor-utils": "^2.0.6",
+    "@glif/filecoin-address": "^2.0.1",
+    "@glif/filecoin-message": "^2.0.1",
+    "@glif/filecoin-number": "^2.0.5",
+    "@glif/filecoin-rpc-client": "^2.0.1",
+    "@glif/filecoin-wallet-provider": "^2.0.5",
+    "@glif/logger": "^2.0.1",
+    "@glif/react-components": "^2.0.0-alpha.155",
     "@zondax/filecoin-signing-tools": "^1.1.2",
     "lodash.clonedeep": "^4.5.0",
     "next": "^12.2.3",
@@ -40,7 +40,7 @@
     "swr": "^1.3.0"
   },
   "devDependencies": {
-    "@glif/deployment-cli": "^2.0.0-beta.12",
+    "@glif/deployment-cli": "^2.0.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.5",
     "@testing-library/react-hooks": "^8.0.1",
