--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@glif/filecoin-rpc-client": "^2.0.7",
     "@glif/filecoin-wallet-provider": "^2.0.7",
     "@glif/logger": "^2.0.1",
-    "@glif/react-components": "^2.0.0-alpha.158",
+    "@glif/react-components": "^2.0.0",
     "@zondax/filecoin-signing-tools": "^1.1.2",
     "next": "^12.2.3",
     "prop-types": "^15.8.1",
