--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
   "dependencies": {
     "@apollo/client": "^3.6.9",
     "@glif/base-css": "^0.0.33",
-    "@glif/filecoin-actor-utils": "^2.0.6",
+    "@glif/filecoin-actor-utils": "^2.0.7",
     "@glif/filecoin-address": "^2.0.1",
     "@glif/filecoin-message": "^2.0.1",
     "@glif/filecoin-number": "^2.0.5",
-    "@glif/filecoin-rpc-client": "^2.0.1",
-    "@glif/filecoin-wallet-provider": "^2.0.5",
+    "@glif/filecoin-rpc-client": "^2.0.7",
+    "@glif/filecoin-wallet-provider": "^2.0.7",
     "@glif/logger": "^2.0.1",
-    "@glif/react-components": "^2.0.0-alpha.157",
+    "@glif/react-components": "^2.0.0",
     "@zondax/filecoin-signing-tools": "^1.1.2",
     "next": "^12.2.3",
     "prop-types": "^15.8.1",
